--- a/.devcontainer/docker-compose.yaml
+++ b/.devcontainer/docker-compose.yaml
@@ -1,5 +1,11 @@
+version: '3.8'
+
 services:
-  cpp_dev:
-    image: cppshelf:latest
+  cppdev:
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "2222:22"
+    volumes:
+      - .:/workspace
