--- a/.devcontainer/docker-compose.yaml
+++ b/.devcontainer/docker-compose.yaml
@@ -1,10 +1,16 @@
 version: '3.8'
 
 services:
-  cppdev:
+  cpp-toolchain-dev:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        BASE_IMAGE: 'ubuntu:latest'
+        GCC_VERSIONS: '>=11'
+        LLVM_VERSIONS: '>=16'
+        OPT_IN_INTEGRATE_BAZEL: no
+        OPT_IN_INTEGRATE_BUILD2: no
     ports:
       - "2222:22"
     volumes:
