--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -14,6 +14,10 @@
         "ms-vscode.test-adapter-converter",
         "fredericbonnet.cmake-test-adapter",
         "ms-vscode.cpptools-extension-pack",
-        "ms-vscode-remote.remote-containers"
+        "ms-vscode-remote.remote-ssh",
+        "ms-vscode-remote.vscode-remote-extensionpack",
+        "ms-vscode.remote-server",
+        "ms-vscode-remote.remote-ssh-edit",
+        "ms-vscode.remote-explorer"
     ]
 }
