--- a/.devcontainer/docker-compose.yaml
+++ b/.devcontainer/docker-compose.yaml
@@ -16,10 +16,12 @@ services:
       - "2222:22"
     volumes:
       - ..:/workspace
-# Runs the service on the same network as the database container, allows "forwardPorts" in devcontainer.json function.
-network_mode: service:db
-# Required for ptrace-based debuggers like C++, Go, and Rust
-cap_add:
-- SYS_PTRACE
-security_opt:
-- seccomp:unconfined
+    # git
+    command:
+      sh -c "git config --global --add safe.directory /workspace"
+    # network_mode: host
+    # Required for ptrace-based debuggers like C++, Go, and Rust
+    cap_add:
+      - SYS_PTRACE
+    security_opt:
+      - seccomp:unconfined
